add colour to nav, add background image

--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
       </ul>
     </nav>
   </header>
+
+  <div class="banner">
+    <div class="banner-content wrapper pad-b gutter-1-2">
+     <p class="push-0 yotta">Dog Tales is a world-renowned dog rescue and horse sanctuary set on an incredible 50 acres of green fields, rolling hills, and wooded areas in King City, Ontario.
+    </div>
+  </div>
 </body>
 </html>
