--- a/index.html
+++ b/index.html
@@ -36,5 +36,57 @@
      <p class="push-0 yotta">Dog Tales is a world-renowned dog rescue and horse sanctuary set on an incredible 50 acres of green fields, rolling hills, and wooded areas in King City, Ontario.
     </div>
   </div>
+
+  <div class="grid">
+    <h2 class="unit [ xs-1 s-1 m-1 l-1 xl-1 ] max-length center-text zetta pad-t-2 pad-b-2">These animals need homes!</h1>
+    <section class="unit [ xs-1 s-1 m-1 l-1-4 xl-1-4 ]">
+      <div class="block center-text">
+        <i class="icon i-192 push">
+          <img src="images/burger.jpg" alt="">
+        </i>
+        <h2 class="text-left push-1-2"><span class="block icon-text">Burger</span></h2>
+      </div>
+      <div class="text-leaf">
+        <p>Burger is a male St.Bernard that is approximately 6 years old. Burger is a big boy with a big personality.</p>
+        <div class="push-1-2">
+          <a class="btn btn-ghost" href="#">Adopt Burger</a>
+        </div>
+      </div>
+      <div class="island-1-2 push-1-2">
+        <hr>
+      </div>
+    </section>
+    <section class="unit [ xs-1 s-1 m-1 l-1-4 xl-1-4 ]">
+      <div class="block center-text">
+        <i class="icon i-192 push">
+          <img src="images/riley.jpg" alt="">
+        </i>
+        <h2 class="text-left push-1-2"><span class="block icon-text">Riley</span></h2>
+      </div>
+      <div class="text-leaf">
+        <p>Riley is a female American Bulldog that is approximately 5 years old. She is incredibly laid back and easy going - always happy to make herself comfortable on her bed, or join you for a walk.</p>
+        <div class="push-1-2">
+          <a class="btn btn-ghost" href="#">Adopt Riley</a>
+        </div>
+      </div>
+      <div class="island-1-2 push-1-2">
+        <hr>
+      </div>
+    </section>
+    <section class="unit [ xs-1 s-1 m-1 l-1-4 xl-1-4 ]">
+    <div class="block center-text">
+      <i class="icon i-192 push">
+        <img src="images/snoopy.jpg" alt="">
+      </i>
+      <h2 class="text-left push-1-2"><span class="block icon-text">Snoopy</span></h2>
+    </div>
+    <div class="text-leaf">
+      <p>Snoopy is a male Rat Terrier who is approximately 10 years old. Snoopy is one spunky old man. He’ll befriend anyone with a treat, and when you’re close enough friends, he’ll even ask you for butt rubs.</p>
+      <div class="push-1-2">
+        <a class="btn btn-ghost" href="#">Adopt Snoopy</a>
+      </div>
+    </div>
+  </section>
+  </div>
 </body>
 </html>
