link html files

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Home</a>
         </li>
         <li class="island-1-8">
-          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Animals</a>
+          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="rescues.html">Animals</a>
         </li>
         <li class="island-1-8">
-          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Adopt</a>
+          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="form.html">Adopt</a>
         </li>
       </ul>
     </nav>
@@ -42,7 +42,7 @@
     <section class="unit [ xs-1 s-1 m-1 l-1-4 xl-1-4 ]">
       <div class="block center-text">
         <i class="icon i-192 push">
-          <img src="images/burger.jpg" alt="">
+          <img src="images/burger.jpeg" alt="">
         </i>
         <h2 class="text-left push-1-2"><span class="block icon-text">Burger</span></h2>
       </div>
@@ -53,13 +53,12 @@
         </div>
       </div>
       <div class="island-1-2 push-1-2">
-        <hr>
       </div>
     </section>
     <section class="unit [ xs-1 s-1 m-1 l-1-4 xl-1-4 ]">
       <div class="block center-text">
         <i class="icon i-192 push">
-          <img src="images/riley.jpg" alt="">
+          <img src="images/riley.jpeg" alt="">
         </i>
         <h2 class="text-left push-1-2"><span class="block icon-text">Riley</span></h2>
       </div>
@@ -70,13 +69,12 @@
         </div>
       </div>
       <div class="island-1-2 push-1-2">
-        <hr>
       </div>
     </section>
     <section class="unit [ xs-1 s-1 m-1 l-1-4 xl-1-4 ]">
     <div class="block center-text">
       <i class="icon i-192 push">
-        <img src="images/snoopy.jpg" alt="">
+        <img src="images/snoopy.jpeg" alt="">
       </i>
       <h2 class="text-left push-1-2"><span class="block icon-text">Snoopy</span></h2>
     </div>
