--- a/rescues.html
+++ b/rescues.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Adopt</title>
+  <title>Dogtales</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -14,18 +14,18 @@
 <body>
   <header class="masthead grid grid-middle island-1-2">
     <div class="logo unit xs-1 s-1 m-1 l-1-4">
-      <h1 class="push-0 gutter-1-4 pad-b-1-4">Animals</h1>
+      <h1 class="push-0 gutter-1-4 pad-b-1-4">Dogtales</h1>
     </div>
     <nav class="nav unit xs-1 s-1 m-1 l-3-4">
       <ul class="list-group-inline push-0">
         <li class="island-1-8">
-          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Home</a>
+          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="index.html">Home</a>
         </li>
         <li class="island-1-8">
-          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Animals</a>
+          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="rescues.html">Animals</a>
         </li>
         <li class="island-1-8">
-          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Adopt</a>
+          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="form.html">Adopt</a>
         </li>
       </ul>
     </nav>
