add form, change file names, add hover

--- a/rescues.html
+++ b/rescues.html
@@ -30,5 +30,47 @@
       </ul>
     </nav>
   </header>
+
+  <section class="grid text-center">
+    <div class="unit xs-1 s-1 m-1-2 l-1-4">
+      <a class="hover-box block relative crop" href="#">
+        <div class="embed embed-3by2">
+          <img class="hover-box-img embed-item" src="images/bandit.jpg" alt="">
+        </div>
+        <div class="hover-box-caption island-1-4 w-1 absolute">
+          <h2 class="giga push-0 not-bold">Bandit</h2>
+        </div>
+      </a>
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-4">
+    <a class="hover-box block relative crop" href="#">
+      <div class="embed embed-3by2">
+        <img class="hover-box-img embed-item" src="images/burger.jpg" alt="">
+      </div>
+      <div class="hover-box-caption island-1-4 w-1 absolute">
+        <h2 class="giga push-0 not-bold">Burger</h2>
+      </div>
+    </a>
+  </div>
+  <div class="unit xs-1 s-1 m-1-2 l-1-4">
+    <a class="hover-box block relative crop" href="#">
+      <div class="embed embed-3by2">
+        <img class="hover-box-img embed-item" src="images/riley.jpg" alt="">
+      </div>
+      <div class="hover-box-caption island-1-4 w-1 absolute">
+        <h2 class="giga push-0 not-bold">Riley</h2>
+      </div>
+    </a>
+  </div>
+  <div class="unit xs-1 s-1 m-1-2 l-1-4">
+    <a class="hover-box block relative crop" href="#">
+      <div class="embed embed-3by2">
+        <img class="hover-box-img embed-item" src="images/snoopy.jpg" alt="">
+      </div>
+      <div class="hover-box-caption island-1-4 w-1 absolute">
+        <h2 class="giga push-0 not-bold">Snoopy</h2>
+      </div>
+    </a>
+  </div>
 </body>
 </html>
