--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="unit [ xs-1 s-1 m-1 l-1-4 xl-1-4 ]">
       <div class="block center-text">
         <i class="icon i-192 push">
-          <img src="images/burger.jpeg" alt="">
+          <img src="images/burger.jpg" alt="">
         </i>
         <h2 class="text-left push-1-2"><span class="block icon-text">Burger</span></h2>
       </div>
@@ -58,7 +58,7 @@
     <section class="unit [ xs-1 s-1 m-1 l-1-4 xl-1-4 ]">
       <div class="block center-text">
         <i class="icon i-192 push">
-          <img src="images/riley.jpeg" alt="">
+          <img src="images/riley.jpg" alt="">
         </i>
         <h2 class="text-left push-1-2"><span class="block icon-text">Riley</span></h2>
       </div>
@@ -74,7 +74,7 @@
     <section class="unit [ xs-1 s-1 m-1 l-1-4 xl-1-4 ]">
     <div class="block center-text">
       <i class="icon i-192 push">
-        <img src="images/snoopy.jpeg" alt="">
+        <img src="images/snoopy.jpg" alt="">
       </i>
       <h2 class="text-left push-1-2"><span class="block icon-text">Snoopy</span></h2>
     </div>
@@ -86,5 +86,6 @@
     </div>
   </section>
   </div>
+  <footer>dogtales©</footer>
 </body>
 </html>
