--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="rescues.html">Animals</a>
         </li>
         <li class="island-1-8">
-          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="form.html">Adopt</a>
+          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="adopt.html">Adopt</a>
         </li>
       </ul>
     </nav>
