add details to dogs

--- a/rescues.html
+++ b/rescues.html
@@ -25,7 +25,7 @@
           <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="rescues.html">Animals</a>
         </li>
         <li class="island-1-8">
-          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="form.html">Adopt</a>
+          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="adopt.html">Adopt</a>
         </li>
       </ul>
     </nav>
@@ -41,6 +41,7 @@
           <h2 class="giga push-0 not-bold">Bandit</h2>
         </div>
       </a>
+      <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-4">
     <a class="hover-box block relative crop" href="#">
@@ -51,6 +52,7 @@
         <h2 class="giga push-0 not-bold">Burger</h2>
       </div>
     </a>
+    <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-4">
     <a class="hover-box block relative crop" href="#">
@@ -61,6 +63,7 @@
         <h2 class="giga push-0 not-bold">Riley</h2>
       </div>
     </a>
+    <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-4">
     <a class="hover-box block relative crop" href="#">
@@ -71,6 +74,7 @@
         <h2 class="giga push-0 not-bold">Snoopy</h2>
       </div>
     </a>
+    <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
   </div>
 </body>
 </html>
