--- a/adopt.html
+++ b/adopt.html
@@ -14,7 +14,7 @@
 <body>
   <header class="masthead grid grid-middle island-1-2">
     <div class="logo unit xs-1 s-1 m-1 l-1-4">
-      <h1 class="push-0 gutter-1-4 pad-b-1-4">Dogtales</h1>
+      <h1 class="push-0 gutter-1-4 pad-b-1-4">Dogtales - Adopt</h1>
     </div>
     <nav class="nav unit xs-1 s-1 m-1 l-3-4">
       <ul class="list-group-inline push-0">
