--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
 
 </head>
-<body>
-  <header class="masthead grid grid-middle island-1-2">
+<body class="">
+  <header class="masthead grid grid-middle island-1-2 ">
     <div class="logo unit xs-1 s-1 m-1 l-1-4">
       <h1 class="push-0 gutter-1-4 pad-b-1-4">Dogtales</h1>
     </div>
@@ -31,9 +31,9 @@
     </nav>
   </header>
   <main>
-    <div class="banner">
+    <div class="island banner">
       <div class="banner-content wrapper pad-b gutter-1-2 embed embed-item">
-        <p class="push-0 yotta">Dog Tales is a world-renowned dog rescue and horse sanctuary set on an incredible 50 acres of green fields, rolling hills, and wooded areas in King City, Ontario.</p>
+        <p class="push-0 zetta">Dog Tales is a world-renowned dog rescue and horse sanctuary set on an incredible 50 acres of green fields, rolling hills, and wooded areas in King City, Ontario.</p>
       </div>
     </div>
 
