--- a/adopt.html
+++ b/adopt.html
@@ -33,7 +33,7 @@
   <section>
     <div class="wrapper">
       <header class="island-1-2 push-2 wrapper">
-        <h1 class="push-1-2 pad-t-1-2">Adopt An Animal!</h1>
+        <h2 class="push-1-2 pad-t-1-2">Adopt An Animal!</h2>
         <p class="mega">These animals need a forever home, will you be the one?</p>
       </header>
 
@@ -204,11 +204,11 @@
         <div class="grid">
           <label class="giga bold push-1-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">Do you have a valid driver's licence?</label>
           <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-            <input id="yes-1" type="radio" name="yes-1">
+            <input id="yes-4" type="radio" name="yes-1">
             <label for="yes-1">Yes</label>
           </div>
           <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-            <input id="no-1" type="radio" name="no-1">
+            <input id="no-4" type="radio" name="no-1">
             <label for="no-1">No</label>
           </div>
 
@@ -241,8 +241,8 @@
 
         <hr>
 
-        <div class="push unit-content-center">
-          <button type="submit">Apply</button>
+        <div class="push unit-content-center btn btn-ghost">
+          <button type="submit">Adopt</button>
         </div>
       </form>
 
