--- a/rescues.html
+++ b/rescues.html
@@ -42,6 +42,7 @@
         </div>
       </a>
       <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
+      <a class="btn-ghost" href="adopt.html">Adopt me!</a>
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-4">
     <a class="hover-box block relative crop" href="#">
@@ -53,6 +54,7 @@
       </div>
     </a>
     <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
+    <a class="btn-ghost" href="adopt.html">Adopt me!</a>
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-4">
     <a class="hover-box block relative crop" href="#">
@@ -64,6 +66,7 @@
       </div>
     </a>
     <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
+    <a class="btn-ghost" href="adopt.html">Adopt me!</a>
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-4">
     <a class="hover-box block relative crop" href="#">
@@ -75,6 +78,7 @@
       </div>
     </a>
     <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
+    <a class="btn btn-ghost" href="adopt.html">Adopt me!</a>
   </div>
 </body>
 </html>
