--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 </head>
 <body class="">
-  <header class="masthead grid grid-middle island-1-2 ">
+
+  <header class="masthead grid grid-middle island-1-2" role="banner">
     <div class="logo unit xs-1 s-1 m-1 l-1-4">
       <h1 class="push-0 gutter-1-4 pad-b-1-4">Dogtales</h1>
     </div>
