--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </header>
   <main>
     <div class="island banner">
-      <div class="banner-content wrapper pad-b gutter-1-2 embed embed-item">
+      <div class="banner-content wrapper pad-b gutter-1-2">
         <p class="push-0 zetta">Dog Tales is a world-renowned dog rescue and horse sanctuary set on an incredible 50 acres of green fields, rolling hills, and wooded areas in King City, Ontario.</p>
       </div>
     </div>
