--- a/rescues.html
+++ b/rescues.html
@@ -80,5 +80,6 @@
     <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
     <a class="btn btn-ghost" href="adopt.html">Adopt me!</a>
   </div>
+  <footer>dogtales©</footer>
 </body>
 </html>
