--- a/adopt.html
+++ b/adopt.html
@@ -37,217 +37,219 @@
         <p class="mega">These animals need a forever home, will you be the one?</p>
       </header>
 
-      <form class="push-0 gutter-1-2">
+      <main>
+        <form class="push-0 gutter-1-2">
 
-        <fieldset>
-          <legend class="push pad-b-1-4 giga">Personal details</legend>
-          <div class="grid">
-            <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="name">Full name</label>
-              <input id="name" name="name">
-              <p class="italic micro">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
-            </div>
-            <div class="push unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="dob">Date of birth</label>
-              <input id="dob" type="date" name="date">
-            </div>
-            <div class="push unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="email">Email</label>
-              <input id="email" type="email" name="email">
-            </div>
-            <div class="push unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="number">Phone number (optional)</label>
-              <input id="number" type="tel" name="number">
-            </div>
-          </div>
-        </fieldset>
-
-        <hr>
-
-        <fieldset>
-          <legend class="giga push pad-t pad-b-1-2">Address</legend>
-          <div class="grid">
-
-            <div class="push pad-b-1-2 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="street">Street address</label>
-              <input id="street" name="street">
-            </div>
-            <div class="push pad-b-1-2 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="city">City</label>
-              <input id="city" name="city">
-            </div>
-            <div class="push pad-b-1-2 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="province">Province</label>
-              <select id="province" name="province">
-                <option value="">Select a province</option>
-                <option>Alberta</option>
-                <option>British Columbia</option>
-                <option>Manitoba</option>
-                <option>New Brunswick</option>
-                <option>Newfoundland & Labrador</option>
-                <option>Northwest Territories</option>
-                <option>Nova Scotia</option>
-                <option>Nunavut</option>
-                <option>Ontario</option>
-                <option>Prince Edward Island</option>
-                <option>Québec</option>
-                <option>Saskatchewan</option>
-                <option>Yukon</option>
-              </select>
-            </div>
-            <div class="push pad-b-1-2 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="postal-code">Postal code</label>
-              <input id="postal-code" name="postal-code">
-            </div>
-          </div>
-        </fieldset>
-
-        <hr>
-
-        <fieldset>
-          <div class="grid">
-
-            <label class="giga bold push pad-t-1-2 unit">What type of home do you live in?</label>
-            <div class="unit xs-1 s-1">
-
-              <div class="grid">
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="digging" type="checkbox" name="digging">
-                  <label for="digging">Acreage</label>
-                </div>
-
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="dirty" type="checkbox" name="dirty">
-                  <label for="dirty">House</label>
-                </div>
-
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="lifting" type="checkbox" name="lifting">
-                  <label for="lifting">Apartment</label>
-                </div>
-              </div>
-
-            </div>
-
+          <fieldset>
+            <legend class="push pad-b-1-4 giga">Personal details</legend>
             <div class="grid">
-              <label class="giga bold push-1-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">Have you had any experiences owning a dog?</label>
-              <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-                <input id="yes-1" type="radio" name="yes-1">
-                <label for="yes-1">Yes</label>
+              <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <label for="name">Full name</label>
+                <input id="name" name="name">
+                <p class="italic micro">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
               </div>
-              <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-                <input id="no-1" type="radio" name="no-1">
-                <label for="no-1">No</label>
+              <div class="push unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <label for="dob">Date of birth</label>
+                <input id="dob" type="date" name="date">
+              </div>
+              <div class="push unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <label for="email">Email</label>
+                <input id="email" type="email" name="email">
+              </div>
+              <div class="push unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <label for="number">Phone number (optional)</label>
+                <input id="number" type="tel" name="number">
               </div>
             </div>
+          </fieldset>
 
-            <label class="giga bold push unit">What breed of dog are you looking for?</label>
-            <div class="unit xs-1">
+          <hr>
+
+          <fieldset>
+            <legend class="giga push pad-t pad-b-1-2">Address</legend>
+            <div class="grid">
+
+              <div class="push pad-b-1-2 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <label for="street">Street address</label>
+                <input id="street" name="street">
+              </div>
+              <div class="push pad-b-1-2 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <label for="city">City</label>
+                <input id="city" name="city">
+              </div>
+              <div class="push pad-b-1-2 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <label for="province">Province</label>
+                <select id="province" name="province">
+                  <option value="">Select a province</option>
+                  <option>Alberta</option>
+                  <option>British Columbia</option>
+                  <option>Manitoba</option>
+                  <option>New Brunswick</option>
+                  <option>Newfoundland & Labrador</option>
+                  <option>Northwest Territories</option>
+                  <option>Nova Scotia</option>
+                  <option>Nunavut</option>
+                  <option>Ontario</option>
+                  <option>Prince Edward Island</option>
+                  <option>Québec</option>
+                  <option>Saskatchewan</option>
+                  <option>Yukon</option>
+                </select>
+              </div>
+              <div class="push pad-b-1-2 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <label for="postal-code">Postal code</label>
+                <input id="postal-code" name="postal-code">
+              </div>
+            </div>
+          </fieldset>
+
+          <hr>
+
+          <fieldset>
+            <div class="grid">
+
+              <label class="giga bold push pad-t-1-2 unit">What type of home do you live in?</label>
+              <div class="unit xs-1 s-1">
+
+                <div class="grid">
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="digging" type="checkbox" name="digging">
+                    <label for="digging">Acreage</label>
+                  </div>
+
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="dirty" type="checkbox" name="dirty">
+                    <label for="dirty">House</label>
+                  </div>
+
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="lifting" type="checkbox" name="lifting">
+                    <label for="lifting">Apartment</label>
+                  </div>
+                </div>
+
+              </div>
 
               <div class="grid">
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="shovels" type="checkbox" name="shovels">
-                  <label for="shovels">Sheltie</label>
+                <label class="giga bold push-1-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">Have you had any experiences owning a dog?</label>
+                <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
+                  <input id="yes-1" type="radio" name="yes-1">
+                  <label for="yes-1">Yes</label>
                 </div>
-
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="gps" type="checkbox" name="gps">
-                  <label for="gps">Shiba-Inu</label>
+                <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
+                  <input id="no-1" type="radio" name="no-1">
+                  <label for="no-1">No</label>
                 </div>
+              </div>
 
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="writing" type="checkbox" name="writing">
-                  <label for="writing">Husky</label>
-                </div>
+              <label class="giga bold push unit">What breed of dog are you looking for?</label>
+              <div class="unit xs-1">
 
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="photography" type="checkbox" name="photography">
-                  <label for="photography">St-Bernard</label>
-                </div>
+                <div class="grid">
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="shovels" type="checkbox" name="shovels">
+                    <label for="shovels">Sheltie</label>
+                  </div>
 
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="climbing" type="checkbox" name="climbing">
-                  <label for="climbing">Boxer</label>
-                </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="gps" type="checkbox" name="gps">
+                    <label for="gps">Shiba-Inu</label>
+                  </div>
 
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="bush-craft" type="checkbox" name="bush-craft">
-                  <label for="bush-craft">Dalmation</label>
-                </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="writing" type="checkbox" name="writing">
+                    <label for="writing">Husky</label>
+                  </div>
 
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="atv" type="checkbox" name="atv">
-                  <label for="atv">Poodle</label>
-                </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="photography" type="checkbox" name="photography">
+                    <label for="photography">St-Bernard</label>
+                  </div>
 
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="identification" type="checkbox" name="identification">
-                  <label for="identification">Greyhound</label>
-                </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="climbing" type="checkbox" name="climbing">
+                    <label for="climbing">Boxer</label>
+                  </div>
 
-                <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="event-planning" type="checkbox" name="event-planning">
-                  <label for="event-planning">Great-Dane</label>
-                </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="bush-craft" type="checkbox" name="bush-craft">
+                    <label for="bush-craft">Dalmation</label>
+                  </div>
 
-                <div class="push unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                  <input id="speaking" type="checkbox" name="speaking">
-                  <label for="speaking">German Shepherd</label>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="atv" type="checkbox" name="atv">
+                    <label for="atv">Poodle</label>
+                  </div>
+
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="identification" type="checkbox" name="identification">
+                    <label for="identification">Greyhound</label>
+                  </div>
+
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="event-planning" type="checkbox" name="event-planning">
+                    <label for="event-planning">Great-Dane</label>
+                  </div>
+
+                  <div class="push unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="speaking" type="checkbox" name="speaking">
+                    <label for="speaking">German Shepherd</label>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </fieldset>
+          </fieldset>
 
-        <hr>
+          <hr>
 
-        <div class="grid">
-          <label class="giga bold push-1-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">Do you have a valid driver's licence?</label>
-          <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-            <input id="yes-4" type="radio" name="yes-1">
-            <label for="yes-1">Yes</label>
-          </div>
-          <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-            <input id="no-4" type="radio" name="no-1">
-            <label for="no-1">No</label>
+          <div class="grid">
+            <label class="giga bold push-1-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">Do you have a valid driver's licence?</label>
+            <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
+              <input id="yes-4" type="radio" name="yes-1">
+              <label for="yes-1">Yes</label>
+            </div>
+            <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
+              <input id="no-4" type="radio" name="no-1">
+              <label for="no-1">No</label>
+            </div>
+
+            <label class="giga bold push-1-2 pad-t-1-2 unit xs-1 s-1 m-1 l-1 xl-1">Do you have a pick-up truck you'd be willing to use?</label>
+            <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
+              <input id="yes-2" type="radio" name="yes-2">
+              <label for="yes-2">Yes</label>
+            </div>
+            <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
+              <input id="no-2" type="radio" name="no-2">
+              <label for="no-2">No</label>
+            </div>
+
+            <label class="giga bold push-1-2 pad-t-1-2 unit xs-1 s-1 m-1 l-1 xl-1">Do you have up-to-date first-aid certification?</label>
+            <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
+              <input id="yes-3" type="radio" name="yes-3">
+              <label for="yes-3">Yes</label>
+            </div>
+            <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
+              <input id="no-3" type="radio" name="no-3">
+              <label for="no-3">No</label>
+            </div>
           </div>
 
-          <label class="giga bold push-1-2 pad-t-1-2 unit xs-1 s-1 m-1 l-1 xl-1">Do you have a pick-up truck you'd be willing to use?</label>
-          <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-            <input id="yes-2" type="radio" name="yes-2">
-            <label for="yes-2">Yes</label>
-          </div>
-          <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-            <input id="no-2" type="radio" name="no-2">
-            <label for="no-2">No</label>
+          <hr>
+          <div class="push-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">
+            <label class="push-1-2 giga bold" for="comments">Please let us know any comments or questions you may have.</label>
+            <textarea id="comments" name="comments"></textarea>
           </div>
 
-          <label class="giga bold push-1-2 pad-t-1-2 unit xs-1 s-1 m-1 l-1 xl-1">Do you have up-to-date first-aid certification?</label>
-          <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-            <input id="yes-3" type="radio" name="yes-3">
-            <label for="yes-3">Yes</label>
+          <hr>
+
+          <div class="push unit-content-center btn btn-ghost">
+            <button type="submit">Adopt</button>
           </div>
-          <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-            <input id="no-3" type="radio" name="no-3">
-            <label for="no-3">No</label>
-          </div>
-        </div>
-
-        <hr>
-        <div class="push-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">
-          <label class="push-1-2 giga bold" for="comments">Please let us know any comments or questions you may have.</label>
-          <textarea id="comments" name="comments"></textarea>
-        </div>
-
-        <hr>
-
-        <div class="push unit-content-center btn btn-ghost">
-          <button type="submit">Adopt</button>
-        </div>
-      </form>
+        </form>
+      </main>
 
     </div>
   </section>
-
+  <footer>dogtales©</footer>
 </body>
 </html>
