fixing adopt html

--- a/rescues.html
+++ b/rescues.html
@@ -9,14 +9,22 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="favicon-196.png">
 
 </head>
 <body>
-  <header class="masthead grid grid-middle island-1-2">
+
+  <ul class="skip-links">
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#nav">Jump to navigation</a></li>
+  </ul>
+
+  <header class="masthead grid grid-middle island-1-2" role="banner">
     <div class="logo unit xs-1 s-1 m-1 l-1-4">
       <h1 class="push-0 gutter-1-4 pad-b-1-4">Dogtales - Rescues</h1>
     </div>
-    <nav class="nav unit xs-1 s-1 m-1 l-3-4">
+    <nav class="nav unit xs-1 s-1 m-1 l-3-4" role="navigation" id="nav" tabindex="0">
       <ul class="list-group-inline push-0">
         <li class="island-1-8">
           <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="index.html">Home</a>
@@ -31,55 +39,60 @@
     </nav>
   </header>
 
-  <section class="grid text-center">
-    <div class="unit xs-1 s-1 m-1-2 l-1-4">
-      <a class="hover-box block relative crop" href="#">
-        <div class="embed embed-3by2">
-          <img class="hover-box-img embed-item" src="images/bandit.jpg" alt="">
+  <main role="main" id="main" tabindex="0">
+    <div class="text-center" role="contentinfo">
+      <section class="grid">
+        <div class="unit xs-1 s-1 m-1-2 l-1-4">
+          <a class="hover-box block relative crop" href="#">
+            <div class="embed embed-3by2">
+              <img class="hover-box-img embed-item" src="images/bandit.jpg" alt="">
+            </div>
+            <div class="hover-box-caption island-1-4 w-1 absolute">
+              <h2 class="giga push-0 not-bold">Bandit</h2>
+            </div>
+          </a>
+          <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
+          <a class="btn-ghost" href="adopt.html">Adopt me!</a>
         </div>
-        <div class="hover-box-caption island-1-4 w-1 absolute">
-          <h2 class="giga push-0 not-bold">Bandit</h2>
+        <div class="unit xs-1 s-1 m-1-2 l-1-4">
+          <a class="hover-box block relative crop" href="#">
+            <div class="embed embed-3by2">
+              <img class="hover-box-img embed-item" src="images/burger.jpg" alt="">
+            </div>
+            <div class="hover-box-caption island-1-4 w-1 absolute">
+              <h2 class="giga push-0 not-bold">Burger</h2>
+            </div>
+          </a>
+          <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
+          <a class="btn-ghost" href="adopt.html">Adopt me!</a>
         </div>
-      </a>
-      <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
-      <a class="btn-ghost" href="adopt.html">Adopt me!</a>
+        <div class="unit xs-1 s-1 m-1-2 l-1-4">
+          <a class="hover-box block relative crop" href="#">
+            <div class="embed embed-3by2">
+              <img class="hover-box-img embed-item" src="images/riley.jpg" alt="">
+            </div>
+            <div class="hover-box-caption island-1-4 w-1 absolute">
+              <h2 class="giga push-0 not-bold">Riley</h2>
+            </div>
+          </a>
+          <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
+          <a class="btn-ghost" href="adopt.html">Adopt me!</a>
+        </div>
+        <div class="unit xs-1 s-1 m-1-2 l-1-4">
+          <a class="hover-box block relative crop" href="#">
+            <div class="embed embed-3by2">
+              <img class="hover-box-img embed-item" src="images/snoopy.jpg" alt="">
+            </div>
+            <div class="hover-box-caption island-1-4 w-1 absolute">
+              <h2 class="giga push-0 not-bold">Snoopy</h2>
+            </div>
+          </a>
+          <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
+          <a class="btn btn-ghost" href="adopt.html">Adopt me!</a>
+        </div>
+      </section>
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-4">
-    <a class="hover-box block relative crop" href="#">
-      <div class="embed embed-3by2">
-        <img class="hover-box-img embed-item" src="images/burger.jpg" alt="">
-      </div>
-      <div class="hover-box-caption island-1-4 w-1 absolute">
-        <h2 class="giga push-0 not-bold">Burger</h2>
-      </div>
-    </a>
-    <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
-    <a class="btn-ghost" href="adopt.html">Adopt me!</a>
-  </div>
-  <div class="unit xs-1 s-1 m-1-2 l-1-4">
-    <a class="hover-box block relative crop" href="#">
-      <div class="embed embed-3by2">
-        <img class="hover-box-img embed-item" src="images/riley.jpg" alt="">
-      </div>
-      <div class="hover-box-caption island-1-4 w-1 absolute">
-        <h2 class="giga push-0 not-bold">Riley</h2>
-      </div>
-    </a>
-    <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
-    <a class="btn-ghost" href="adopt.html">Adopt me!</a>
-  </div>
-  <div class="unit xs-1 s-1 m-1-2 l-1-4">
-    <a class="hover-box block relative crop" href="#">
-      <div class="embed embed-3by2">
-        <img class="hover-box-img embed-item" src="images/snoopy.jpg" alt="">
-      </div>
-      <div class="hover-box-caption island-1-4 w-1 absolute">
-        <h2 class="giga push-0 not-bold">Snoopy</h2>
-      </div>
-    </a>
-    <p>Bandit is a lonely dog, but loves the attention from anyone willing to give him some time.</p>
-    <a class="btn btn-ghost" href="adopt.html">Adopt me!</a>
-  </div>
+  </main>
   <footer>dogtales©</footer>
 </body>
 </html>
