--- a/adopt.html
+++ b/adopt.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon.ico">
   <link rel="apple-touch-icon" href="images/favicon-196.png">
-
 </head>
 <body>
 
@@ -43,11 +42,13 @@
       <header class="island-1-2 push-2 wrapper">
         <h2 class="push-1-2 pad-t-1-2">Adopt An Animal!</h2>
         <p class="mega">These animals need a forever home, will you be the one?</p>
+        <div class="embed embed-16by9">
+          <img src="images/bandit.jpg" class="embed-item" alt="">
+        </div>
       </header>
       <main role="main" id="main" tabindex="0">
-        <img class="embed embed-16by9 embed-item" src="images/bandit.jpg" alt="">
         <div role="contentinfo">
-          <form class="push-0 gutter-1-2">
+          <form action="thanks.html" class="push-0 gutter-1-2">
             <fieldset>
               <legend class="push pad-b-1-4 giga">Personal details</legend>
               <div class="grid">
@@ -114,134 +115,87 @@
             <hr>
 
             <fieldset>
-              <legend>Personal details</legend>
+              <legend>What kind of home do you live in?</legend>
+              <label for="home">What kind of home do you live in?</label>
+              <select required id="home" name="home">
+                <option value="">Select a type</option>
+                <option>Acreage</option>
+                <option>House</option>
+                <option>Apartment</option>
+              </select>
+            </fieldset>
+            <fieldset class="grid">
+              <legend class="giga bold push-1-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">Have you had any experiences owning a dog?</legend>
+              <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
+                <input type="radio" id="yes-1" name="yes-1" value="">
+                <label for="yes-1">yes</label>
+              </div>
+              <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
+                <input type="radio" id="no-1" name="experience" value="">
+                <label for="no-1">no</label>
+              </div>
+            </fieldset>
+            <fieldset>
+              <legend>What breed are you looking for?</legend>
               <div class="grid">
-
-                <label class="giga bold push pad-t-1-2 unit">What type of home do you live in?</label>
-                <div class="unit xs-1 s-1">
-                  <div class="grid">
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="digging" type="checkbox" name="digging">
-                      <label for="digging">Acreage</label>
-                    </div>
-
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="dirty" type="checkbox" name="dirty">
-                      <label for="dirty">House</label>
-                    </div>
-
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="lifting" type="checkbox" name="lifting">
-                      <label for="lifting">Apartment</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="grid">
-
-                  <label class="giga bold push-1-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">Have you had any experiences owning a dog?</label>
-                  <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-                    <input id="yes-1" type="radio" name="yes-1">
-                    <label for="yes-1">Yes</label>
-                  </div>
-                  <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-                    <input id="no-1" type="radio" name="no-1">
-                    <label for="no-1">No</label>
-                  </div>
-                </div>
-                <label class="giga bold push unit">What breed of dog are you looking for?</label>
                 <div class="unit xs-1">
-                  <div class="grid">
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="shovels" type="checkbox" name="shovels">
-                      <label for="shovels">Sheltie</label>
-                    </div>
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="gps" type="checkbox" name="gps">
-                      <label for="gps">Shiba-Inu</label>
-                    </div>
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="writing" type="checkbox" name="writing">
-                      <label for="writing">Husky</label>
-                    </div>
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="photography" type="checkbox" name="photography">
-                      <label for="photography">St-Bernard</label>
-                    </div>
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="climbing" type="checkbox" name="climbing">
-                      <label for="climbing">Boxer</label>
-                    </div>
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="bush-craft" type="checkbox" name="bush-craft">
-                      <label for="bush-craft">Dalmation</label>
-                    </div>
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="atv" type="checkbox" name="atv">
-                      <label for="atv">Poodle</label>
-                    </div>
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="identification" type="checkbox" name="identification">
-                      <label for="identification">Greyhound</label>
-                    </div>
-                    <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="event-planning" type="checkbox" name="event-planning">
-                      <label for="event-planning">Great-Dane</label>
-                    </div>
-                    <div class="push unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-                      <input id="speaking" type="checkbox" name="speaking">
-                      <label for="speaking">German Shepherd</label>
-                    </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="breed" type="checkbox" name="breed">
+                    <label for="breed">Sheltie</label>
+                  </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="gps" type="checkbox" name="gps">
+                    <label for="gps">Shiba-Inu</label>
+                  </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="writing" type="checkbox" name="writing">
+                    <label for="writing">Husky</label>
+                  </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="photography" type="checkbox" name="photography">
+                    <label for="photography">St-Bernard</label>
+                  </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="climbing" type="checkbox" name="climbing">
+                    <label for="climbing">Boxer</label>
+                  </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="bush-craft" type="checkbox" name="bush-craft">
+                    <label for="bush-craft">Dalmation</label>
+                  </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="atv" type="checkbox" name="atv">
+                    <label for="atv">Poodle</label>
+                  </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="identification" type="checkbox" name="identification">
+                    <label for="identification">Greyhound</label>
+                  </div>
+                  <div class="push-1-4 unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="event-planning" type="checkbox" name="event-planning">
+                    <label for="event-planning">Great-Dane</label>
+                  </div>
+                  <div class="push unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                    <input id="speaking" type="checkbox" name="speaking">
+                    <label for="speaking">German Shepherd</label>
                   </div>
                 </div>
               </div>
             </fieldset>
-
             <hr>
-
-            <div class="grid">
-              <label class="giga bold push-1-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">Do you have a valid driver's licence?</label>
+            <fieldset>
+              <legend>Questions</legend>
               <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-                <input id="yes-4" type="radio" name="yes-1">
-                <label for="yes-1">Yes</label>
-              </div>
-              <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-                <input id="no-4" type="radio" name="no-1">
-                <label for="no-1">No</label>
-              </div>
-
-              <label class="giga bold push-1-2 pad-t-1-2 unit xs-1 s-1 m-1 l-1 xl-1">Do you have a pick-up truck you'd be willing to use?</label>
-              <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-                <input id="yes-2" type="radio" name="yes-2">
-                <label for="yes-2">Yes</label>
-              </div>
-              <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-                <input id="no-2" type="radio" name="no-2">
+                <input id="no-2" type="radio" name="no-1">
                 <label for="no-2">No</label>
               </div>
-
-              <label class="giga bold push-1-2 pad-t-1-2 unit xs-1 s-1 m-1 l-1 xl-1">Do you have up-to-date first-aid certification?</label>
-              <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-                <input id="yes-3" type="radio" name="yes-3">
-                <label for="yes-3">Yes</label>
+              <div class="push-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">
+                <label class="push-1-2 giga bold" for="comments">Please let us know any comments or questions you may have.</label>
+                <textarea id="comments" name="comments"></textarea>
               </div>
-              <div class="push-2 unit xs-1-3 s-1-3 m-1-4 l-1-4 xl-1-6">
-                <input id="no-3" type="radio" name="no-3">
-                <label for="no-3">No</label>
-              </div>
-            </div>
-
-            <hr>
-
-            <div class="push-2 pad-t unit xs-1 s-1 m-1 l-1 xl-1">
-              <label class="push-1-2 giga bold" for="comments">Please let us know any comments or questions you may have.</label>
-              <textarea id="comments" name="comments"></textarea>
-            </div>
-
-            <hr>
-
-            <div class="push unit-content-center btn btn-ghost">
-              <button type="submit">Adopt</button>
-            </div>
+            </fieldset>
+            <button class="push btn btn-ghost" type="submit">Adopt</button>
+            <a href="#">More information</a>
           </form>
         </div>
       </main>
