--- a/rescues.html
+++ b/rescues.html
@@ -40,7 +40,7 @@
   </header>
 
   <main role="main" id="main" tabindex="0">
-    <div class="text-center" role="contentinfo">
+    <div class="text-center">
       <section class="grid">
         <div class="unit xs-1 s-1 m-1-2 l-1-4">
           <a class="hover-box block relative crop" href="#">
@@ -93,6 +93,6 @@
       </section>
     </div>
   </main>
-  <footer>dogtales©</footer>
+  <footer role="contentinfo">dogtales©</footer>
 </body>
 </html>
