--- a/adopt.html
+++ b/adopt.html
@@ -23,6 +23,7 @@
     <div class="logo unit xs-1 s-1 m-1 l-1-4">
       <h1 class="push-0 gutter-1-4 pad-b-1-4">Dogtales - Adopt</h1>
     </div>
+
     <nav class="nav unit xs-1 s-1 m-1 l-3-4" role="navigation" id="nav" tabindex="0">
       <ul class="list-group-inline push-0">
         <li class="island-1-8">
@@ -39,15 +40,26 @@
   </header>
   <section>
     <div class="wrapper">
-      <header class="island-1-2 push-2 wrapper">
+      <!--
+      <section class="island-1-2 push-2 wrapper">
         <h2 class="push-1-2 pad-t-1-2">Adopt An Animal!</h2>
         <p class="mega">These animals need a forever home, will you be the one?</p>
         <div class="embed embed-16by9">
           <img src="images/bandit.jpg" class="embed-item" alt="">
         </div>
-      </header>
+      </section>
+
+    -->
+    <div class="island-1-2">
+      <h2 class="push-1-2 pad-t-1-2">Adopt An Animal!</h2>
+      <p class="mega">These animals need a forever home, will you be the one?</p>
+      <figure class="w-1 embed embed-item">
+        <img src="images/bandit.jpg" alt="" class="img-flex embed-3by2">
+      </figure>
+    </div>
+
       <main role="main" id="main" tabindex="0">
-        <div role="contentinfo">
+        <div  role="complementary" id="complementary">
           <form action="thanks.html" class="push-0 gutter-1-2">
             <fieldset>
               <legend class="push pad-b-1-4 giga">Personal details</legend>
@@ -201,6 +213,6 @@
       </main>
     </div>
   </section>
-  <footer>dogtales©</footer>
+  <footer role="contentinfo">dogtales©</footer>
 </body>
 </html>
