--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="grid" role="contentinfo">
+    <div class="grid">
       <h2 class="unit [ xs-1 s-1 m-1 l-1 xl-1 ] max-length center-text zetta pad-t-2 pad-b-2">These animals need homes!</h2>
       <section class="unit [ xs-1 s-1 m-1 l-1-4 xl-1-4 ]">
         <div class="block center-text">
@@ -95,6 +95,6 @@
       </section>
     </div>
   </main>
-  <footer>dogtales©</footer>
+  <footer role="contentinfo">dogtales©</footer>
 </body>
 </html>
